Restyle add/remove buttons

--- a/app/components/Group/Group.pcss
+++ b/app/components/Group/Group.pcss
@@ -2,6 +2,12 @@
   margin: 2rem 0 3rem;
 
   & .button {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
+    background: transparent;
+    color: var(--govuk-blue);
+    border-bottom-color: var(--govuk-white);
+    box-shadow: none;
+    text-decoration: underline;
+    padding-left: 0;
   }
 }
