--- a/app/components/Group/Group.njk
+++ b/app/components/Group/Group.njk
@@ -36,6 +36,9 @@
 {% set blocks = getBlockProp(name, 'blocks') %}
 {% endif %}
 {% for block in blocks %}
+  {% if multipleCounterRef %}
+    {% set updateFormatSink = updateFormat(multipleCounterRef, multipleIndex, multipleCounterRef + '-current', currentMultipleIndex) %}
+  {% endif %}
   {% set blockType = block._blockType %}
   {% set blockData = block.data %}
   {# {% if not blockType %}
