--- a/app/css/utils/app-components.pcss
+++ b/app/css/utils/app-components.pcss
@@ -1,3 +1,4 @@
+@import 'Back/Back.pcss';
 @import 'CookieMessage/CookieMessage.pcss';
 @import 'FeedbackBanner/FeedbackBanner.pcss';
 @import 'Group/Group.pcss';
