--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -77,6 +77,7 @@
 
 {% block content %}
 {% block breadcrumbs_content %}{% endblock %}
+{% block back_content %}{% endblock %}
 {% block main_content %}
 <main data-block-name="{{ route.id }}">
 {% block grid_content %}{{ Block.Group(blocks=route.blocks) }}{% endblock %}
