Tweak positioning of legal warning icon

--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -157,3 +157,12 @@ sup {
 .extraBlocks {
   margin-top: 3rem;
 }
+
+.gv-c-notice {
+  margin-bottom: 2.5rem;
+}
+
+.gv-c-notice .gv-c-notice__icon {
+  top: 0;
+  margin-top: 0;
+}
