Add multiple route add/delete components

--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -22,6 +22,8 @@
   "components/Hidden/Hidden.njk",
   "components/Input/Input.njk",
   "components/Inset/Inset.njk",
+  "components/MultipleRouteAdd/MultipleRouteAdd.njk",
+  "components/MultipleRouteDelete/MultipleRouteDelete.njk",
   "components/Notice/Notice.njk",
   "components/Number/Number.njk",
   "components/OptionLabel/OptionLabel.njk",
