--- a/app/templates/summary/summary.html
+++ b/app/templates/summary/summary.html
@@ -85,12 +85,12 @@ table + form p {
 {% endif %}
 {% if not abortRow %}
 {% set args = { 'app:route:_index' : stepRoute._index } %}
-<tr data-route-header="{{ step }}"><th class="dataRouteHeader" colspan="3">{{ getFormattedProp(step, ['summary_heading', 'heading'], {xargs:args}) }}</th></tr>
+<tr data-route-header="{{ step }}"><th class="dataRouteHeader" colspan="3">{{ getFormattedBodyContent(step, ['summary_heading', 'heading'], {xargs:args}) | safe }}</th></tr>
   {% for el in stepBlocks %}
 {% if checkNoDependency(el) %}
 {% set prefixedEl = el %}
 {% if stepRoute._prefix %}{% set prefixedEl = stepRoute._prefix + prefixedEl %}{% endif %}
-  {% set label = getFormattedProp(el, 'label') %}
+  {% set label = getFormattedBodyContent(el, 'label') %}
   {% set value = getDisplayValue(el, '<br>', {}, stepRoute._prefix) %}
               <tr class="section" data-route-body="{{ step }}">
   <td class="previous-question-title">{{ label | safe }}
