--- a/app/components/MultipleRouteAdd/MultipleRouteAdd.njk
+++ b/app/components/MultipleRouteAdd/MultipleRouteAdd.njk
@@ -3,11 +3,10 @@
 {% set addValue = 1 %}
 {% if autofields[route.multiple_counter] %}{% set addValue = autofields[route.multiple_counter] %}{% endif %}
 {% set addValue = addValue + 1 %}
-{% if route.multiple_max >= addValue %}{% if route._index == addValue - 1 %}
+{% if route.multiple_max >= addValue %}
 {% if name %}{% set addLabel = getFormattedProp(name, 'value') %}{% endif %}
 {% if not addLabel %}{% set addLabel = getFormattedProp(route.id, 'multiple_add', 'Add another') %}{% endif %}
-<button class="button button--add" type="submit" name="{{ route.multiple_counter }}" value="{{ addValue }}">{{ addLabel | safe }}</button>
-{% endif %}
+<button class="button button--add" type="submit" name="add" value="{{ route.multiple_counter }}">{{ addLabel | safe }}</button>
 {% endif %}
 {% endif %}
 {% endmacro %}
