--- a/app/components/Date/Date.njk
+++ b/app/components/Date/Date.njk
@@ -5,8 +5,9 @@
     {% set prefixedName = name %}
     {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
   {% set error = getError(prefixedName) %}
+  {% set visually_hidden = getBlockProp(name, 'visuallyhidden') %}
   <div id="{{ prefixedName }}" class="form-group{% if error %} error{% endif %}"{% if name %} data-block-name="{{name}}"{% endif %}>
-  {% call Fieldset(name) %}
+  {% call Fieldset(name, visually_hidden=visually_hidden) %}
     {% set dateType = getBlockProp(name, 'date_type', 'day-month-year') %}
     <div class="form-date">
       {% if 'day' in dateType %}{{ Input(name, suffix='day', type='number', label='Day', pattern='[0-9]*', min=0, max=31, placeholder='dd') }}{% endif %}
