--- a/app/components/ControlError/ControlError.njk
+++ b/app/components/ControlError/ControlError.njk
@@ -3,6 +3,6 @@
 {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
 {% set error = getFormattedError(prefixedName, { error: error, prefix:route._prefix }) %}
 {% if error %}
-<span class="error-message" id="error-message-{{ prefixedName }}">{{ error }}</span>
+<span class="error-message" id="error-message-{{ prefixedName }}">{{ error | safe}}</span>
 {% endif %}
 {%- endmacro %}
