--- a/app/templates/app-base/app-base.html
+++ b/app/templates/app-base/app-base.html
@@ -8,7 +8,7 @@
 {% from 'components/PhaseBanner/PhaseBanner.njk' import PhaseBanner with context %}
 {% from 'components/SupportLinks/SupportLinks.njk' import SupportLinks with context %}
 
-{% block page_title %}{{ getFormattedProp(route.id, ['title', 'heading']) }}{% if route.id != route.homepage %} - {{ getFormattedProp(route.homepage, ['title', 'heading']) }}{% endif %}{% endblock %}
+{% block page_title %}{{ getFormattedBodyContent(route.id, ['title', 'heading']) | striptags }}{% if route.id != route.homepage %} - {{ getFormattedBodyContent(route.homepage, ['title', 'heading']) | striptags }}{% endif %}{% endblock %}
 
 {% block body_classes %}{{ route.template }}{% if req.disqualified %} disqualified{% endif %}{% endblock %}
 
