--- a/app/components/Group/Group.pcss
+++ b/app/components/Group/Group.pcss
@@ -9,5 +9,7 @@
     box-shadow: none;
     text-decoration: underline;
     padding-left: 0;
+    padding-right: 0;
+    margin-right: 5rem;
   }
 }
