Fix incorrect id applied to single checkbox field-group container

--- a/app/components/CheckboxGroup/CheckboxGroup.njk
+++ b/app/components/CheckboxGroup/CheckboxGroup.njk
@@ -1,17 +1,19 @@
 {% from '../Fieldset/Fieldset.njk' import Fieldset with context %}
 {% from '../OptionLabel/OptionLabel.njk' import OptionLabel with context %}
 {% from '../SubBlock/SubBlock.njk' import SubBlock with context %}
-{% macro CheckboxGroup(name, inline='', label='', or=false, options='', visually_hidden=false) %}
+{% macro CheckboxGroup(name, id='', inline='', label='', or=false, options='', visually_hidden=false) %}
 {% set prefixedName = name %}
 {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
 {% set error = getError(prefixedName) %}
 {% set inline = getBlockProp(name, 'inline', { value: inline }) %}
 {% set label = getBlockProp(name, 'label', { value: label }) %}
+{% if not options %}
 {% set options = getBlockProp(name, 'options', { value: options }) %}
+{% endif %}
 {% if not visually_hidden %}
 {% set visually_hidden = getBlockProp(name, 'visuallyhidden') %}
 {% endif %}
-<div class="form-group{% if error %} error{% endif %}"{% if name %} id="{{name}}" data-block-name="{{name}}"{% endif %}>
+<div class="form-group{% if error %} error{% endif %}"{% if name %} id="{% if id %}{{ id }}{% else %}{{name}}{% endif %}" data-block-name="{{name}}"{% endif %}>
 {% call Fieldset(name, label=label, inline=inline, visually_hidden=visually_hidden) %}
   {#% set or = getBlockProp(name, 'or') %#}
   {% for option_name in options %}
