--- a/app/components/Checkbox/Checkbox.njk
+++ b/app/components/Checkbox/Checkbox.njk
@@ -3,5 +3,5 @@
 {% set prefixedName = name %}
 {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
 {% set options = [name] %}
-{{ CheckboxGroup(name, options=options, visually_hidden=true)}}
+{{ CheckboxGroup(name, id=name+'__checkbox', options=options, visually_hidden=true)}}
 {% endmacro %}
