Allow checked to be passed through in dynamic options

--- a/app/components/CheckboxGroup/CheckboxGroup.njk
+++ b/app/components/CheckboxGroup/CheckboxGroup.njk
@@ -17,13 +17,14 @@
 {% call Fieldset(name, label=label, inline=inline, visually_hidden=visually_hidden) %}
   {#% set or = getBlockProp(name, 'or') %#}
   {% for option_name in options %}
+    {% set checked = false %}
     {% if option_name.value or option_name.label %}
       {% set option = option_name %}
       {% set option_name = option.name %}
+      {% set checked = option.checked %}
     {% else %}
       {% set option = getBlockProp(option_name) %}
     {% endif %}
-    {% set checked = false %}
     {% set option_value = 'yes' %}
     {% if option.value %}
       {% set option_value = option.value %}
