Cater for nested fields within individual checkbox group options

--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -108,6 +108,11 @@ sup {
     display: table;
     margin-bottom: 10px;
     margin-right: 0;
+    width: 100%;
+
+    & .panel-border-narrow {
+      margin-left: -38px;
+    }
   }
 }
 
