--- a/app/components/CheckboxGroup/CheckboxGroup.njk
+++ b/app/components/CheckboxGroup/CheckboxGroup.njk
@@ -15,7 +15,7 @@
 {% endif %}
 <div class="form-group{% if error %} error{% endif %}"{% if name %} id="{% if id %}{{ id }}{% else %}{{name}}{% endif %}" data-block-name="{{name}}"{% endif %}>
 {% call Fieldset(name, label=label, inline=inline, visually_hidden=visually_hidden) %}
-  {#% set or = getBlockProp(name, 'or') %#}
+  {% set or = getBlockProp(name, 'or') %}
   {% for option_name in options %}
     {% set checked = false %}
     {% if option_name.value or option_name.label %}
