--- a/app/components/CheckboxGroup/CheckboxGroup.njk
+++ b/app/components/CheckboxGroup/CheckboxGroup.njk
@@ -31,6 +31,8 @@
     {% endif %}
     {% set prefixedOptionName = option_name %}
     {% if route._prefix %}{% set prefixedOptionName = route._prefix + prefixedOptionName %}{% endif %}
+    {% if route._prefix %}{% set prefixedName = route._prefix + prefixedName %}{% endif %}
+    {% set outputOption = checkNoDependency(prefixedOptionName, skipDependencyCheck) %}
     {% if option_value === getValue(prefixedOptionName) %}
       {% set checked = true %}
     {% endif %}
@@ -41,12 +43,14 @@
         <p class="form-block">{{ getString('string:or') }}</p>
       {% endif %}	
     {% endif %}
+    {% if outputOption %}
     {% set reveals = checkReveals(prefixedOptionName, option_value) %}
     <div class="multiple-choice"{% if reveals %} data-target="reveals--{{ reveals }}"{% endif %}>
       <input id="{{ prefixedOptionName }}" type="checkbox" name="{{ prefixedOptionName }}" value="{{ option_value }}"{% if checked %} checked{% endif %}{% if reveals %} aria-controls="reveals--{{ reveals }}"{% endif %}>
     <label data-block-name={{option_name}} for="{{ prefixedOptionName }}" class="block-label selection-button-checkbox"{% if excludes %} data-excludes="true"{% endif %}>{{ OptionLabel(option) -}}</label>
     {{ SubBlock(option.subblock) }}
     </div>
+    {% endif %}
   {% endfor %}
 {% endcall %}
 </div>
