Add or block hook

--- a/app/components/CheckboxGroup/CheckboxGroup.njk
+++ b/app/components/CheckboxGroup/CheckboxGroup.njk
@@ -40,7 +40,7 @@
       {% set excludes = option.excludes %}
       {% if excludes %}{% set or = true %}{% endif %}
       {% if or %}
-        <p class="form-block">{{ getString('string:or') }}</p>
+        <p class="form-block or-block">{{ getString('string:or') }}</p>
       {% endif %}	
     {% endif %}
     {% if outputOption %}
