--- a/app/components/RadioGroup/RadioGroup.njk
+++ b/app/components/RadioGroup/RadioGroup.njk
@@ -63,7 +63,7 @@
       {% endif %}
       {% if loop.last %}
         {% if or %}
-          <p class="form-block">{{ getString('string:or') }}</p>
+          <p class="form-block or-block">{{ getString('string:or') }}</p>
         {% endif %}	
       {% endif %}
       <div class="multiple-choice"{% if optionReveals %} data-target="reveals--{{ optionReveals }}"{% endif %}>
